# Geometry-Shader

GeometryShader/: CMakeLists.txt  LoadShaders.cpp  Makefile  geometry.frag  geometryshader  geometryshader.cpp  lines.geom  points.geom  program1  readme.txt
geotest/: BlinnPhong.frag  BlinnPhong.vert  CMakeLists.txt  InterestingScene.txt  Makefile  ReadScene.cpp  ReadScene.h  Readme.txt  geometry.geom  scene11.txt  viewer  viewer.cpp
geotest/OBJfiles/: Garfield_tex.mtl  plant.mtl  tea.mtl
geotest/include/: glm-0.9.8.4.7z
